<resources>
    <string name="app_nome">LynxME</string>
    <string name="app_versao">2.1.53</string>
    <string name="error_field_required">O campo é de preenchimento obrigatório</string>
    <string name="error_invalid_rota">Informe um código de rota válido</string>
    <string name="panel_info_prompt_cliente">Clientes:</string>
    <string name="panel_info_prompt_positivacao">Positivação:</string>
    <string name="panel_info_prompt_pedidos">Pedidos:</string>
    <string name="panel_info_prompt_aenviar">A enviar:</string>
    <string name="panel_info_prompt_caixas">Caixas:</string>
    <string name="item_menu_cliente">Clientes</string>
    <string name="item_menu_upload">Envio</string>
    <string name="item_menu_download">Recebimento</string>
    <string name="item_menu_flash">Flash</string>
    <string name="item_menu_pedidos">Pedidos</string>
    <string name="msgLogin">Para prosseguir, informe o código do vendedor</string>
    <string name="app_hint">Buscar</string>
    <string name="menu_settings">Settings</string>
    <string name="login_titulo_lynx">Lynx</string>
    <string name="login_titulo_sales_force">Bebidas Nova Geração</string>
    <string name="btn_login">Login</string>
    <string name="menu_login_inicializar">Inicializar</string>
    <string name="menu_login_atualizar">Atualizar</string>
    <string name="menu_login_preferencias">Preferências</string>
    <string name="menu_login_copiabd">Copiar banco de dados</string>
    <string name="dbpath">"/data/data/br.com.lynx/databases/LynxME"</string>
    <string name="Orders">"Pedidos"</string>
    <string name="Customers">"Clientes"</string>
    <string name="Communication">"Comunicação"</string>
    <string name="Preferences">"Preferências"</string>
    <string name="Reports">"Relatórios"</string>
    <string name="Identificacao">"Identificação"</string>
    <string name="Fantasia">"Fantasia"</string>
    <string name="Status">"Status"</string>
    <string name="Tipo">"Tipo"</string>
    <string name="CondicaoVenda">"Condição de venda"</string>
    <string name="Endereco">"Endereço"</string>
    <string name="Cidade">"Cidade"</string>
    <string name="Bairro">"Bairro"</string>
    <string name="Complemento">"Complemento"</string>
    <string name="Telefone">"Telefone"</string>
    <string name="Subcanal">"Subcanal"</string>
    <string name="AnoAnterior">"Periodo anterior"</string>
    <string name="AnoAtual">"Periodo atual"</string>
    <string name="Variacao">"Variação"</string>
    <string name="app_name">LynxME - Força de vendas</string>
    <string name="app_client">Bebidas Nova Geração Ltda</string>
    <string name="app_title">Lynx ME</string>
    <string name="app_subtitle">Força de vendas</string>
    <string name="Comparativo">"Comparativo"</string>
    <string name="app_copyright">Software desenvolvido por \n Rogério Jun Miyazaki de Souza</string>
    <string name="app_title_version">LynxME - Versão 2.0.25</string>
    <string name="hint_rota">Código vendedor</string>
    <string name="btnLogin_caption">Login</string>
    <string name="idPrincipal_LabelCliente">Clientes:</string>
    <string name="idPrincipal_LabelPositivacao">Positivação:</string>
    <string name="idPrincipal_LabelCaixas">Caixas:</string>
    <string name="idPrincipal_LabelNumeroPedidos">Pedidos:</string>
    <string name="idPrincipal_LabelPedidosNaoEnviados">A Enviar:</string>
    <string name="idCliente_LabelComparativo">COMPARATIVO</string>
    <string name="idCliente_LabelPeriodoAnterior">ANTERIOR:</string>
    <string name="idCliente_LabelPeriodoAtual">ATUAL:</string>
    <string name="idCliente_LabelVariacao">VARIAÇÃO:</string>
    <string name="idRowEquipamento_LabelGeko">Geko:</string>
    <string name="idRowEquipamento_LabelLogomarca">Logomarca:</string>
    <string name="idRowEquipamento_LabelVoltagem">Voltagem:</string>
    <string name="idRowEquipamento_LabelMeta">Meta:</string>
    <string name="idRowEquipamento_LabelRealizado">Realizado:</string>
    <string name="idRowEquipamento_LabelDiferenca">Diferença:</string>
    <string name="Sim">Sim</string>
    <string name="Não">Não</string>
    <string name="Enviar">Enviar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Numero_Checkouts">Qual a quantidade de checkouts do cliente?</string>
    <string name="Gondola_Chocolate">Gôndola Chocolate</string>
    <string name="Gondola_Biscoito">Gôndola Biscoito</string>
    <string name="Gondola_PB">Gôndola PBs</string>
    <string name="Gondola_Sobremesa">Gôndola Sobremesa</string>
    <string name="Gondola_Gomas">Gôndola Gomas e Drops</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta1">1 - O item BIS AO LEITE 126G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta2">2 - O item BIS LAKA 126G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta3">3 - O item LACTA SONHO DE VALSA 90G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta4">4 - O item LACTA OREO 90G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta5">5 - O item DIAMANTE NEGRO 150G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta6">6 - O item LAKA 150G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta7">7 - O item LACTA AO LEITE 150G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta8">8 - Informe o preço das Tabuas LACTA 150G.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta9">9 - Informe o preço das Tabuas NESTLE 160G.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta10">10 - Informe o preço das Tabuas GAROTO 150G.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta11">11 - Informe o preço do BIS XTRA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta12">12 - Informe o preço do KIT KAT 45G.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta13">13 - Informe o preço do BIS BANDEJA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta14">14 - Informe o preço do HERSHEYS MAIS BANDEJA 115G.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta15">15 - Informe o preço da CAIXA DE SUCESSOS LACTA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta16">16 - Informe o preço da CAIXA DE BOMBONS SORTIDOS GAROTO.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta17">17 - Informe o preço da CAIXA DE ESPECIALIDADES NESTLÉ.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta18">18 - Quantidade de Display de chão de TÁBUAS LACTA 150G.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta19">19 - Quantidade de outros pontos extras de TÁBUAS LACTA 150G.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta20">20 - Quantidade de Display de chão de BIS BANDEJA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta21">21 - Quantidade de outros pontos extras de BIS BANDEJA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta22">22 - Quantidade de Display de chão de CANDY BAR(5stars/Lancy).</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta23">23 - Quantidade de outros pontos extras de CANDY BAR(5stars/Lancy).</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta24">24 - Quantidade de Display de chão de CAIXA DE SUCESSOS LACTA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta25">25 - Quantidade de outros pontos extras de CAIXA DE SUCESSOS LACTA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta26">26 - O item CLUB SOCIAL ORIGINAL 6 unidades está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta27">27 - O item CLUB SOCIAL INTEGRAL 6 unidades está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta28">28 - O item OREO FLOW PACK 90G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta29">29 - O item OREO MILKSHAKE MOR 90G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta30">30 - O item OREO BAUNILHA MULTIPACK 140G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta31">31 - O item OREO BAUNILHA 90G está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta32">32 - O item BELVITA MEL E CACAU está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta33">33 - O item CLUB SOCIAL PIZZA está presente?</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta34">34 - Informe o preço da TRAKINAS.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta35">35 - Informe o preço do PASSATEMPO RECHEADO.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta36">36 - Informe o preço do CLUB SOCIAL ORIGINAL.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta37">37 - Informe o preço do CLUB SOCIAL INTEGRAL.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta38">38 - Informe o preço do PITSTOP SEM RECHEIO.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta39">39 - Informe o preço do OREO 90G.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta40">40 - Informe o preço do NEGRESCO.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta41">41 - Informe o preço da BELVITA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta42">42 - Informe o preço da NESFIT DOCE.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta43">43 - Quantidade de Display de chão de TRAKINAS.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta44">44 - Quantidade de outros pontos extras de TRAKINAS.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta45">45 - Quantidade de Display de chão de CLUB SOCIAL.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta46">46 - Quantidade de outros pontos extras de CLUB SOCIAL.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta47">47 - Quantidade de Display de chão de OREO.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta48">48 - Quantidade de outros pontos extras de OREO.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta49">49 - Quantidade de Display de chão de BELVITA.</string>
    <string name="Pesquisa_Gondola_Checkout_1_4_Pergunta50">50 - Quantidade de outros pontos extras de BELVITA.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta1">1 - Informe o preço do item HALLS 10.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta2">2 - Informe o preço do item HALLS SOFT.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta3">3 - Informe o preço do item TRIDENT 5s.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta4">4 - Informe o preço do item BOMBOM SONHO DE VALSA ou OURO BRANCO.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta5">5 - Informe o preço do item LACTA 5STARS.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta6">6 - Informe o preço do item TABLETINHO 25G.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta7">7 - Informe o preço do item TABLETE RECHEADO.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta8">8 - Informe o preço do item FREGELLS 10s.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta9">9 - Informe o preço do item TIC TAC 16G.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta10">10 - Informe o preço do item MENTHOS STICK BALA MASTIGÁVEL.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta11">11 - Informe o preço do item MENTHOS 3G.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta12">12 - Informe o preço do item BOMBOM SERENATA DE AMOR.</string>
    <string name="Pesquisa__Checkout_Preco_Pergunta13">13 - Informe o preço do item SNICKERS.</string>
</resources>