<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".control.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/idLogin_edtVendedorID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hint="Número da rota"
            android:inputType="number"
            android:background="@drawable/textfield_activated_holo_light"
            android:maxLines="1"
            android:maxLength="4"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:layout_toEndOf="@+id/textView5"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_client"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView5"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="39dp"
            android:text="@string/app_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:text="@string/app_subtitle"
            android:textColor="#000000" />

        <Button
            android:id="@+id/idLogin_btnLogin"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/idLogin_edtVendedorID"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/idLogin_edtVendedorID"
            android:background="@drawable/bluebutton"
            android:text="@string/btnLogin_caption"
            android:layout_gravity="right" />

    </RelativeLayout>

</LinearLayout>